# AI-news-crawler

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Technical stack.md  icon-preview.html  index.html  make_shortcut.bat  package-lock.json  package.json  product design.md  tsconfig.json  tsconfig.tsbuildinfo  创建快捷方式.bat  创建桌面快捷方式.ps1  创建桌面快捷方式.vbs  启动应用(已构建).bat  启动应用.bat  启动说明.md  重新构建并启动.bat
.claude/: settings.local.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/article/: ArticleCard.tsx  ArticleList.tsx
src/components/common/: CategoryBadge.tsx  EmptyState.tsx  HeatIndicator.tsx
src/components/settings/: SummaryUpdateProgress.tsx
src/lib/: api.ts
src/styles/: globals.css
src/types/: index.ts
