[package]
name = "ai-news-aggregator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }
rss = "2.0"
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
